--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "ahoy",
   "version": "1.0.0",
-  "description": "A simple interface for managing releases and deployments.",
+  "description": "A simple, scalable interface for managing releases.",
   "repository": {
     "type": "git",
     "url": "https://github.com/aelawson/ahoy"
   },
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "build": "webpack",
+    "serve": "webpack-dev-server --open"
   },
   "author": "Andrew Lawson",
   "license": "MIT",
@@ -20,7 +22,11 @@
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.1.3",
+    "css-loader": "^0.28.1",
+    "html-webpack-plugin": "^2.28.0",
     "source-map-loader": "^0.2.1",
-    "typescript": "^2.3.2"
+    "style-loader": "^0.17.0",
+    "typescript": "^2.3.2",
+    "webpack-dev-server": "^2.4.5"
   }
 }
