--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "ahoy",
   "version": "1.0.0",
   "description": "A simple, scalable interface for managing releases.",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/aelawson/ahoy"
-  },
+  "repository": "https://github.com/aelawson/ahoy",
   "main": "index.js",
   "scripts": {
     "test": "test",
@@ -25,8 +22,9 @@
     "css-loader": "^0.28.1",
     "html-webpack-plugin": "^2.28.0",
     "source-map-loader": "^0.2.1",
-    "style-loader": "^0.17.0",
+    "style-loader": "^0.18.2",
     "typescript": "^2.3.2",
+    "webpack": "^3.0.0",
     "webpack-dev-server": "^2.4.5"
   }
 }
