--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
     "sourceMap": true,
     "noImplicitAny": true,
+    "removeComments": true,
     "module": "commonjs",
     "target": "es5",
     "jsx": "react"
