--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
   "author": "Andrew Lawson",
   "license": "MIT",
   "dependencies": {
+    "@types/material-ui": "^0.17.15",
+    "@types/node": "^8.0.10",
     "@types/react": "^15.0.24",
     "@types/react-dom": "^15.5.0",
+    "@types/react-tap-event-plugin": "^0.0.30",
+    "less": "^2.7.2",
+    "material-ui": "^0.18.6",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.1.3",
     "css-loader": "^0.28.1",
     "html-webpack-plugin": "^2.28.0",
+    "less-loader": "^4.0.4",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
     "typescript": "^2.3.2",
