--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "removeComments": true,
     "module": "commonjs",
     "target": "es5",
-    "jsx": "react"
+    "jsx": "react",
+    "lib": [
+      "es2015",
+      "dom"
+    ]
   },
   "include": [
     "./app/**/*"
