--- a/package.json
+++ b/package.json
@@ -12,26 +12,37 @@
   "author": "Andrew Lawson",
   "license": "MIT",
   "dependencies": {
-    "@types/material-ui": "^0.17.15",
-    "@types/node": "^8.0.10",
-    "@types/react": "^15.0.24",
-    "@types/react-dom": "^15.5.0",
-    "@types/react-tap-event-plugin": "^0.0.30",
-    "less": "^2.7.2",
-    "material-ui": "^0.18.6",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-tap-event-plugin": "^2.0.1"
+    "less": "^3.0.1",
+    "material-ui": "^0.20.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-tap-event-plugin": "^3.0.2",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^3.1.3",
-    "css-loader": "^0.28.1",
-    "html-webpack-plugin": "^2.28.0",
-    "less-loader": "^4.0.4",
-    "source-map-loader": "^0.2.1",
-    "style-loader": "^0.18.2",
-    "typescript": "^2.3.2",
-    "webpack": "^3.0.0",
-    "webpack-dev-server": "^2.4.5"
+    "@types/js-yaml": "^3.9.1",
+    "@types/material-ui": "^0.21.1",
+    "@types/node": "^9.4.7",
+    "@types/react": "^16.0.40",
+    "@types/react-dom": "^16.0.4",
+    "@types/react-redux": "^5.0.10",
+    "@types/react-tap-event-plugin": "^0.0.30",
+    "@types/yamljs": "^0.2.30",
+    "awesome-typescript-loader": "^4.0.1",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "css-loader": "^0.28.10",
+    "html-webpack-plugin": "^3.0.6",
+    "less-loader": "^4.1.0",
+    "redux-devtools": "^3.4.0",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.20.3",
+    "typescript": "^2.7.2",
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11",
+    "webpack-dev-server": "^3.1.1",
+    "yamljs": "^0.3.0"
   }
 }
