--- a/package.json
+++ b/package.json
@@ -18,18 +18,21 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-tap-event-plugin": "^3.0.2",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "@types/js-yaml": "^3.9.1",
     "@types/material-ui": "^0.21.1",
     "@types/node": "^9.4.7",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.10",
     "@types/react-tap-event-plugin": "^0.0.30",
+    "@types/redux-logger": "^3.0.5",
     "@types/yamljs": "^0.2.30",
-    "awesome-typescript-loader": "^4.0.1",
+    "awesome-typescript-loader": "^5.0.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
