--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "author": "Andrew Lawson",
   "license": "MIT",
   "dependencies": {
+    "@types/history": "^4.6.2",
+    "@types/react-router-redux": "^5.0.13",
+    "history": "^4.7.2",
     "less": "^3.0.1",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
@@ -29,8 +34,10 @@
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.10",
+    "@types/react-router-dom": "^4.2.6",
     "@types/react-tap-event-plugin": "^0.0.30",
     "@types/redux-logger": "^3.0.5",
+    "@types/redux-thunk": "^2.1.0",
     "@types/yamljs": "^0.2.30",
     "awesome-typescript-loader": "^5.0.0",
     "babel": "^6.23.0",
