Refactor to use reactstrap instead of material ui. Use table for teams list instead of cards - remove team component. Remove material-ui as a dependency. Other small changes.

--- a/package.json
+++ b/package.json
@@ -7,35 +7,36 @@
   "scripts": {
     "test": "test",
     "build": "webpack",
-    "serve": "webpack-dev-server --open"
+    "serve": "webpack-dev-server --open --mode=development"
   },
   "author": "Andrew Lawson",
   "license": "MIT",
   "dependencies": {
     "@types/history": "^4.6.2",
     "@types/react-router-redux": "^5.0.13",
+    "bootswatch": "^4.0.0",
     "history": "^4.7.2",
     "less": "^3.0.1",
-    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-tap-event-plugin": "^3.0.2",
+    "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "@types/material-ui": "^0.21.1",
     "@types/node": "^9.4.7",
     "@types/react": "^16.0.40",
     "@types/react-dom": "^16.0.4",
     "@types/react-redux": "^5.0.10",
     "@types/react-router-dom": "^4.2.6",
     "@types/react-tap-event-plugin": "^0.0.30",
+    "@types/reactstrap": "^5.0.20",
     "@types/redux-logger": "^3.0.5",
     "@types/redux-thunk": "^2.1.0",
     "@types/yamljs": "^0.2.30",
